--- a/src/main/resources/templates/ProductList.html
+++ b/src/main/resources/templates/ProductList.html
@@ -5,17 +5,30 @@
     <title>Product List</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <style>
-        .btn-light-green {
+        .btn-edit {
             background-color: #28a745; /* Green background */
             border-color: #28a745;     /* Green border */
             color: white;             /* White text */
         }
 
-        .btn-light-green:hover {
+        .btn-edit:hover {
             background-color: #218838; /* Darker green for hover */
             border-color: #1e7e34;    /* Matching border for hover */
             color: white;              /* Keep the text white */
         }
+
+        .btn-delete {
+            background-color: #dc3545; /* Red background */
+            border-color: #dc3545;     /* Red border */
+            color: white;              /* White text */
+        }
+
+        .btn-delete:hover {
+            background-color: #c82333; /* Darker red for hover */
+            border-color: #bd2130;
+            color: white;
+        }
+
     </style>
 </head>
 <body>
@@ -29,7 +42,7 @@
             <tr>
                 <th scope="col">Product Name</th>
                 <th scope="col">Quantity</th>
-                <th scope="col">Edit</th>
+                <th scope="col">Edit/Delete</th>
             </tr>
         </thead>
         <tbody>
@@ -37,7 +50,12 @@
                 <td th:text="${product.productName}"></td>
                 <td th:text="${product.productQuantity}"></td>
                 <td>
-                    <a th:href="@{/product/edit/{productId}(productId=${product.productId})}" class="btn btn-light-green btn-sm">Edit</a>
+                    <a th:href="@{/product/edit/{productId}(productId=${product.productId})}" class="btn btn-edit btn-sm">Edit</a>
+                    <a th:href="@{/product/delete/{id}(id=${product.productId})}"
+                       class="btn btn-delete btn-sm"
+                       onclick="return confirm('Do you want to delete this product (This action cannot be undone)?');">
+                        Delete
+                    </a>
                 </td>
             </tr>
         </tbody>
