--- a/src/main/resources/templates/HomePage.html
+++ b/src/main/resources/templates/HomePage.html
@@ -18,6 +18,9 @@
     <a th:href="@{/product/list}">
         <button class="btn btn-primary">View Product List</button>
     </a>
+    <a th:href="@{/car/listCar}">
+        <button class="btn btn-primary">Car List</button>
+    </a>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
